# icecream-cpp

./: .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  IcecreamCppConfig.cmake.in  LICENSE.txt  README.md  aa.cpp  default.nix  flake.nix  icecream-cpp-config.cmake  icecream-cpp-config.cmake.in  icecream.hpp  meson.build  test.cpp  test_compile_fail.cpp
.ci-dockerfiles/: Dockerfile_base  gcc_gen.sh
.github/workflows/: ci.yaml
ci_images/: Dockerfile_gcc54  flake.nix
example_project/: CMakeLists.txt  README.md  conanfile.txt  flake.nix  hello.cpp
test/: CMakeLists.txt  test.cpp
tests/: CMakeLists.txt  common.hpp  conanfile.py  conanfile.txt  test_2.cpp  test_c++11.cpp  test_c++17.cpp  test_c++20.cpp  test_c++23.cpp  test_clang.cpp  test_config.cpp  test_disabled.cpp  test_fmt.cpp  test_range_v3.cpp  test_slicing.cpp  test_strings_c++11.cpp  test_strings_c++17.cpp  test_strings_c++20.cpp
